# Python_OOPS_projects

./: README.md  inventory.db
billing-system-grocery-store/: main.py  pyproject.toml
car-rental-system/: main.py  pyproject.toml
course-enrollment/: main.py  pyproject.toml
digital-diary/: main.py  pyproject.toml
event-registration-system/: main.py  pyproject.toml
inventory-management-system/: README.md  add_sample_data.py  inventory.db  main.py  pyproject.toml
space-mission-tracker/: main.py  pyproject.toml
student-addendance-system/: main.py  pyproject.toml
